--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <nav class="nav">
           <a href="./index.html" class="logo nav-logo">Web<span>Studio</span></a>
           <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link" href="./index.html">Studio</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-            <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
+            <li class="nav-item"><a class="nav-link" href="#hero">Studio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#footer">Contacts</a></li>
           </ul>
         </nav>
         <address class="contacts">
@@ -43,17 +43,22 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section id="hero" class="hero">
         <div class="container">
           <h1 class="hero-heading">Effective Solutions for Your Business</h1>
           <button type="button" class="order-btn">Order Service</button>
         </div>
       </section>
-      <section class="section about">
+      <section id="about-us" class="section about">
         <div class="container">
           <h2 class="visually-hidden">About Us</h2>
           <ul class="about-list">
             <li class="about-item">
+              <div class="about-icon-box">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Strategy</h3>
               <p class="about-descr">
                 Our goal is to identify the business problem to walk away with the perfect and
@@ -61,6 +66,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div class="about-icon-box">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Punctuality</h3>
               <p class="about-descr">
                 Bring the key message to the brand's audience for the best price within the shortest
@@ -68,6 +78,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div class="about-icon-box">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Diligence</h3>
               <p class="about-descr">
                 Research and confirm brands that present the strongest digital growth opportunities
@@ -75,6 +90,11 @@
               </p>
             </li>
             <li class="about-item">
+              <div class="about-icon-box">
+                <svg class="about-icon" width="64" height="64">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Technologies</h3>
               <p class="about-descr">
                 Design practice focused on digital experiences. We bring forth a deep passion for
@@ -84,7 +104,7 @@
           </ul>
         </div>
       </section>
-      <section class="section team">
+      <section id="team" class="section team">
         <div class="container">
           <h2 class="heading team-heading">Our Team</h2>
           <ul class="team-list">
@@ -98,6 +118,28 @@
               <div class="team-card-content">
                 <h3 class="team-card-title">Mark Guerrero</h3>
                 <p class="team-card-descr">Product Designer</p>
+                <ul class="team-socials">
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -110,6 +152,28 @@
               <div class="team-card-content">
                 <h3 class="team-card-title">Tom Ford</h3>
                 <p class="team-card-descr">Frontend Developer</p>
+                <ul class="team-socials">
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -122,6 +186,28 @@
               <div class="team-card-content">
                 <h3 class="team-card-title">Camila Garcia</h3>
                 <p class="team-card-descr">Marketing</p>
+                <ul class="team-socials">
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-card">
@@ -134,88 +220,146 @@
               <div class="team-card-content">
                 <h3 class="team-card-title">Daniel Wilson</h3>
                 <p class="team-card-descr">UI Designer</p>
+                <ul class="team-socials">
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#instagram"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#twitter"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#facebook"></use>
+                    </svg>
+                  </li>
+                  <li class="social-link">
+                    <svg class="social-icon" width="16" height="16">
+                      <use href="./images/icons.svg#linkedin"></use>
+                    </svg>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
         </div>
       </section>
-      <section class="section portfolio">
+      <section id="portfolio" class="section portfolio">
         <div class="container">
           <h2 class="heading portfolio-heading">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-1.jpg"
-                alt="Desktop app interface"
-                class="portfolio-card-img"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio-img-1.jpg"
+                  alt="Desktop app interface"
+                  class="portfolio-card-img"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-card-title">Banking App</h3>
                 <p class="portfolio-card-descr">App</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-2.jpg"
-                alt="Making payment with mobile"
-                class="portfolio-card-img"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio-img-2.jpg"
+                  alt="Making payment with mobile"
+                  class="portfolio-card-img"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-card-title">Cashless Payment</h3>
                 <p class="portfolio-card-descr">Marketing</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-3.jpg"
-                alt="Computer screen with a meditation app"
-                class="portfolio-card-img"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio-img-3.jpg"
+                  alt="Computer screen with a meditation app"
+                  class="portfolio-card-img"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-card-title">Meditation App</h3>
                 <p class="portfolio-card-descr">App</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-4.jpg"
-                alt="A car on the road"
-                class="portfolio-card-img"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio-img-4.jpg"
+                  alt="A car on the road"
+                  class="portfolio-card-img"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-card-title">Taxi Service</h3>
                 <p class="portfolio-card-descr">Marketing</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-5.jpg"
-                alt="Mobile screen with illustrations"
-                class="portfolio-card-img"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio-img-5.jpg"
+                  alt="Mobile screen with illustrations"
+                  class="portfolio-card-img"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-card-title">Screen Illustrations</h3>
                 <p class="portfolio-card-descr">Design</p>
               </div>
             </li>
             <li class="portfolio-card">
-              <img
-                src="./images/portfolio-img-6.jpg"
-                alt="Smiling student with a phone"
-                class="portfolio-card-img"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-thumb">
+                <img
+                  src="./images/portfolio-img-6.jpg"
+                  alt="Smiling student with a phone"
+                  class="portfolio-card-img"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                  Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                </p>
+              </div>
               <div class="portfolio-card-content">
                 <h3 class="portfolio-card-title">Online Courses</h3>
                 <p class="portfolio-card-descr">Marketing</p>
@@ -225,13 +369,40 @@
         </div>
       </section>
     </main>
-    <footer class="footer">
+    <footer id="footer" class="footer">
       <div class="container">
-        <a href="./index.html" class="logo footer-logo">Web<span class="decor">Studio</span></a>
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with digital marketing & growth
-          solutions.
-        </p>
+        <div class="footer-promo">
+          <a href="./index.html" class="logo footer-logo">Web<span class="decor">Studio</span></a>
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with digital marketing &
+            growth solutions.
+          </p>
+        </div>
+        <div class="footer-socials">
+          <p class="footer-social-title">Social media</p>
+          <ul class="footer-socials-list">
+            <li class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#instagram"></use>
+              </svg>
+            </li>
+            <li class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#twitter"></use>
+              </svg>
+            </li>
+            <li class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#facebook"></use>
+              </svg>
+            </li>
+            <li class="social-link">
+              <svg class="social-icon" width="24" height="24">
+                <use href="./images/icons.svg#linkedin"></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
