--- a/index.html
+++ b/index.html
@@ -119,25 +119,33 @@
                 <h3 class="team-card-title">Mark Guerrero</h3>
                 <p class="team-card-descr">Product Designer</p>
                 <ul class="team-socials">
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:instagram.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:twitter.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:facebook.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:linkedin.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -145,7 +153,7 @@
             <li class="team-card">
               <img
                 src="./images/ford.jpg"
-                alt="Smiling young man wearing blue shirt"
+                alt="Smiling white man wearing blue shirt"
                 width="264"
                 height="260"
               />
@@ -153,25 +161,33 @@
                 <h3 class="team-card-title">Tom Ford</h3>
                 <p class="team-card-descr">Frontend Developer</p>
                 <ul class="team-socials">
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:instagram.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:twitter.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:facebook.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:linkedin.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -187,25 +203,33 @@
                 <h3 class="team-card-title">Camila Garcia</h3>
                 <p class="team-card-descr">Marketing</p>
                 <ul class="team-socials">
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:instagram.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:twitter.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:facebook.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:linkedin.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -221,25 +245,33 @@
                 <h3 class="team-card-title">Daniel Wilson</h3>
                 <p class="team-card-descr">UI Designer</p>
                 <ul class="team-socials">
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#instagram"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:instagram.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#twitter"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:twitter.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#facebook"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:facebook.com" target="_blank" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
                   </li>
-                  <li class="social-link">
-                    <svg class="social-icon" width="16" height="16">
-                      <use href="./images/icons.svg#linkedin"></use>
-                    </svg>
+                  <li class="social-item">
+                    <a href="https:linkedin.com" class="social-link">
+                      <svg class="social-icon" width="16" height="16">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
                   </li>
                 </ul>
               </div>
@@ -381,25 +413,33 @@
         <div class="footer-socials">
           <p class="footer-social-title">Social media</p>
           <ul class="footer-socials-list">
-            <li class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#instagram"></use>
-              </svg>
+            <li class="social-item">
+              <a href="https:instagram.com" target="_blank" class="social-link footer-social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#twitter"></use>
-              </svg>
+            <li class="social-item">
+              <a href="https:twitter.com" target="_blank" class="social-link footer-social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#facebook"></use>
-              </svg>
+            <li class="social-item">
+              <a href="https:facebook.com" target="_blank" class="social-link footer-social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
             </li>
-            <li class="social-link">
-              <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#linkedin"></use>
-              </svg>
+            <li class="social-item">
+              <a href="https:linkedin.com" target="_blank" class="social-link footer-social-link">
+                <svg class="social-icon" width="24" height="24">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
