--- a/index.html
+++ b/index.html
@@ -120,28 +120,28 @@
                 <p class="team-card-descr">Product Designer</p>
                 <ul class="team-socials">
                   <li class="social-item">
-                    <a href="https:instagram.com" target="_blank" class="social-link">
+                    <a href="https://instagram.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:twitter.com" target="_blank" class="social-link">
+                    <a href="https://twitter.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:facebook.com" target="_blank" class="social-link">
+                    <a href="https://facebook.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:linkedin.com" target="_blank" class="social-link">
+                    <a href="https://linkedin.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -162,28 +162,28 @@
                 <p class="team-card-descr">Frontend Developer</p>
                 <ul class="team-socials">
                   <li class="social-item">
-                    <a href="https:instagram.com" target="_blank" class="social-link">
+                    <a href="https://instagram.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:twitter.com" target="_blank" class="social-link">
+                    <a href="https://twitter.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:facebook.com" target="_blank" class="social-link">
+                    <a href="https://facebook.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:linkedin.com" target="_blank" class="social-link">
+                    <a href="https://linkedin.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -204,28 +204,28 @@
                 <p class="team-card-descr">Marketing</p>
                 <ul class="team-socials">
                   <li class="social-item">
-                    <a href="https:instagram.com" target="_blank" class="social-link">
+                    <a href="https://instagram.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:twitter.com" target="_blank" class="social-link">
+                    <a href="https://twitter.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:facebook.com" target="_blank" class="social-link">
+                    <a href="https://facebook.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:linkedin.com" target="_blank" class="social-link">
+                    <a href="https://linkedin.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -246,28 +246,28 @@
                 <p class="team-card-descr">UI Designer</p>
                 <ul class="team-socials">
                   <li class="social-item">
-                    <a href="https:instagram.com" target="_blank" class="social-link">
+                    <a href="https://instagram.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:twitter.com" target="_blank" class="social-link">
+                    <a href="https://twitter.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:facebook.com" target="_blank" class="social-link">
+                    <a href="https://facebook.com" target="_blank" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="social-item">
-                    <a href="https:linkedin.com" class="social-link">
+                    <a href="https://linkedin.com" class="social-link">
                       <svg class="social-icon" width="16" height="16">
                         <use href="./images/icons.svg#linkedin"></use>
                       </svg>
@@ -414,28 +414,32 @@
           <p class="footer-social-title">Social media</p>
           <ul class="footer-socials-list">
             <li class="social-item">
-              <a href="https:instagram.com" target="_blank" class="social-link footer-social-link">
+              <a
+                href="https://instagram.com"
+                target="_blank"
+                class="social-link footer-social-link"
+              >
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a href="https:twitter.com" target="_blank" class="social-link footer-social-link">
+              <a href="https://twitter.com" target="_blank" class="social-link footer-social-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a href="https:facebook.com" target="_blank" class="social-link footer-social-link">
+              <a href="https://facebook.com" target="_blank" class="social-link footer-social-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-item">
-              <a href="https:linkedin.com" target="_blank" class="social-link footer-social-link">
+              <a href="https://linkedin.com" target="_blank" class="social-link footer-social-link">
                 <svg class="social-icon" width="24" height="24">
                   <use href="./images/icons.svg#linkedin"></use>
                 </svg>
